# pipe-it-project

pipe-it-backend/: .gitignore  pyproject.toml
pipe-it-backend/src/pipe_it_backend/actions/: send_discord_message_action.py
pipe-it-backend/src/pipe_it_backend/pipeline/: interfaces.py  pipeline_handler.py
pipe-it-backend/src/pipe_it_backend/scheduling/: scheduler.py
pipe-it-frontend/: package.json  pnpm-lock.yaml
pipe-it-frontend/src/: App.tsx  CustomNode.tsx
