[tool.poetry]
name = "pipe-it-backend"
version = "0.1.0"
description = ""
authors = ["Lucas Silva <lucas76leonardo@gmail.com>"]
readme = "README.md"
packages = [{include = "pipe_it_backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
dataclass-codec = "^0.5.6"
croniter = "^1.4.1"
py-mini-racer = "^0.6.0"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.2"
mypy = "^1.4.1"
autoflake = "^2.2.0"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
types-croniter = "^1.4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
